@@ -1,5 +1,7 @@
 New entries should be added at the top
 
+2005-04-27 Set postscript page size in .matplotlibrc - DSD
+
 2005-04-26 Added embedding in qt example.
 
 2005-04-14 Applied Michael Brady's qt backend patch: 1) fix a bug
